LSTM algorithm